@@ -87,10 +87,8 @@
             </plugin>              <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>3.1.0</version>
-        <configuration>
-          <mainClass>com.example.SparkCEPTransactionDetector</mainClass>
-          <options>
+        <version>3.1.0</version>        <configuration>
+          <mainClass>com.example.SparkCEPTransactionBatch</mainClass>          <options>
             <option>--add-opens=java.base/java.lang=ALL-UNNAMED</option>
             <option>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</option>
             <option>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</option>
@@ -105,6 +103,7 @@
             <option>--add-opens=java.base/sun.security.action=ALL-UNNAMED</option>
             <option>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</option>
             <option>--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED</option>
+            <option>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</option>
           </options>
         </configuration>
       </plugin>
